--- a/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
+++ b/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
@@ -295,6 +295,7 @@
     <Compile Include="Model\ItemModel.cs" />
     <Compile Include="Model\CompraModel.cs" />
     <Compile Include="Model\PublicacionModel.cs" />
+    <Compile Include="Model\PuntosVencidosModel.cs" />
     <Compile Include="Model\UbicacionModel.cs" />
     <Compile Include="Premio.cs">
       <DependentUpon>ModeloDatos.tt</DependentUpon>
