--- a/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
+++ b/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
@@ -143,6 +143,12 @@
     <Compile Include="Extensiones\PremioControl.Designer.cs">
       <DependentUpon>PremioControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Usuario\CambiarContraseñaAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Usuario\CambiarContraseñaAdmin.Designer.cs">
+      <DependentUpon>CambiarContraseñaAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Validaciones\Sesion.cs" />
     <Compile Include="Extensiones\TextBoxRequerido.cs">
       <SubType>UserControl</SubType>
@@ -450,6 +456,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Roles\RolesForm.pa-Guru.resx">
       <DependentUpon>RolesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Usuario\CambiarContraseñaAdmin.resx">
+      <DependentUpon>CambiarContraseñaAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Usuario\CambiarContraseñaForm.resx">
       <DependentUpon>CambiarContraseñaForm.cs</DependentUpon>
