--- a/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
+++ b/Aplicacion Desktop/PalcoNet/PalcoNet.csproj
@@ -143,6 +143,18 @@
     <Compile Include="Extensiones\PremioControl.Designer.cs">
       <DependentUpon>PremioControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Compras\AsociarTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Compras\AsociarTarjeta.designer.cs">
+      <DependentUpon>AsociarTarjeta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Compras\ConfirmarTarjeta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Compras\ConfirmarTarjeta.designer.cs">
+      <DependentUpon>ConfirmarTarjeta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Usuario\CambiarContraseñaAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -397,6 +409,9 @@
     <EmbeddedResource Include="Forms\Clientes\ModifClientesForm.resx">
       <DependentUpon>ModifClientesForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Compras\AsociarTarjeta.resx">
+      <DependentUpon>AsociarTarjeta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Compras\ComisionesForm.resx">
       <DependentUpon>ComisionesForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -405,6 +420,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Compras\ConfirmarCompraForm.resx">
       <DependentUpon>ConfirmarCompraForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Compras\ConfirmarTarjeta.resx">
+      <DependentUpon>ConfirmarTarjeta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Compras\FacturaDetallesForm.resx">
       <DependentUpon>FacturaDetallesForm.cs</DependentUpon>
