--- a/src/PalcoNet.csproj
+++ b/src/PalcoNet.csproj
@@ -150,6 +150,12 @@
     <Compile Include="Forms\Compras\AsociarTarjeta.designer.cs">
       <DependentUpon>AsociarTarjeta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Roles\EditarRolForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Roles\EditarRolForm.Designer.cs">
+      <DependentUpon>EditarRolForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Usuario\CambiarContraseñaAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -463,6 +469,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Publicaciones\EditarPublicacionForm.resx">
       <DependentUpon>EditarPublicacionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Roles\EditarRolForm.resx">
+      <DependentUpon>EditarRolForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Roles\RolesForm.pa-Guru.resx">
       <DependentUpon>RolesForm.cs</DependentUpon>
