--- a/src/PalcoNet.csproj
+++ b/src/PalcoNet.csproj
@@ -544,7 +544,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Premios\sc_escalera5posiciones_det_1.jpg" />
-    <None Include="Resources\Premios\sc_carry-on-control-remoto.jpg" />
     <None Include="Resources\Premios\sc_brq294_det_1.jpg" />
     <None Include="Resources\Premios\brq306_1.jpg" />
     <None Include="Resources\Premios\brp760_grilla.jpg" />
@@ -568,6 +567,7 @@
       <DependentUpon>ModeloDatos.edmx</DependentUpon>
       <LastGenOutput>ModeloDatos.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\Premios\brq304_2.jpg" />
     <None Include="Resources\config.png" />
   </ItemGroup>
   <ItemGroup>
